<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <packaging>pom</packaging>
    <modules>
        <module>demo-spring-boot-aop</module>
        <module>demo-spring-boot-async</module>
        <module>demo-spring-boot-hello</module>
        <module>demo-spring-boot-redis</module>
        <module>demo-spring-boot-validated</module>
        <module>demo-spring-boot-sa-token</module>
        <module>demo-spring-boot-elasticsearch</module>
        <module>demo-spring-boot-kafka</module>
        <module>demo-spring-boot-rabbitmq</module>
        <module>demo-spring-boot-shiro</module>
        <module>demo-spring-boot-security</module>
        <module>demo-spring-boot-mybatis</module>
        <module>demo-spring-boot-jpa</module>
        <module>demo-spring-boot-redisson</module>
        <module>demo-spring-boot-jdbc</module>
        <module>demo-spring-boot-hibernate</module>
        <module>demo-spring-boot-logback</module>
        <module>demo-spring-boot-docker</module>
        <module>demo-spring-boot-swagger</module>
        <module>demo-spring-boot-email</module>
        <module>demo-spring-boot-oss</module>
        <module>demo-spring-boot-websocket</module>
        <module>demo-spring-boot-poi</module>
        <module>demo-spring-boot-jenkins</module>
        <module>demo-spring-boot-rocketmq</module>
        <module>demo-spring-boot-mybatis-plus</module>
        <module>demo-spring-boot-swagger-2</module>
        <module>demo-spring-boot-swagger-3</module>
        <module>demo-spring-boot-excel</module>
        <module>demo-spring-boot-csv</module>
        <module>demo-spring-boot-upload</module>
        <module>demo-spring-boot-download</module>
        <module>demo-spring-boot-thymeleaf</module>
        <module>demo-spring-boot-cache</module>
        <module>demo-spring-boot-caffeine</module>
        <module>demo-spring-boot-socket</module>
        <module>demo-spring-boot-netty</module>
        <module>demo-spring-boot-tidb</module>
        <module>demo-spring-boot-druid</module>
        <module>demo-spring-boot-event</module>
        <module>demo-spring-boot-webflux</module>
        <module>demo-spring-boot-metadata</module>
        <module>demo-spring-boot-scheduled</module>
        <module>demo-spring-boot-api-result</module>
        <module>demo-spring-boot-jersey</module>
        <module>demo-spring-boot-mybatis-pagehelper</module>
        <module>demo-spring-boot-order</module>
        <module>demo-spring-boot-jetty</module>
        <module>demo-spring-boot-undertow</module>
        <module>demo-spring-boot-feature</module>
        <module>demo-spring-boot-future-task</module>
        <module>demo-spring-boot-circular-bean</module>
        <module>demo-spring-boot-test</module>
        <module>demo-spring-boot-guava</module>
        <module>demo-spring-boot-log</module>
        <module>demo-spring-boot-webservice</module>
        <module>demo-spring-boot-locale</module>
        <module>demo-spring-boot-activiti</module>
        <module>demo-spring-boot-jsonview</module>
        <module>demo-spring-boot-shell</module>
        <module>demo-spring-boot-vue3</module>
        <module>demo-spring-boot-native</module>
    </modules>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.6.5</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>

    <groupId>com.fengwenyi</groupId>
    <artifactId>spring-boot-demo</artifactId>
    <version>0.0.1-SNAPSHOT</version>

    <name>spring-boot-demo</name>
    <description>Spring Boot Demo</description>

    <properties>
        <java.version>1.8</java.version>
        <spring-boot.version>2.6.5</spring-boot.version>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <version>${spring-boot.version}</version>
                <configuration>
                    <excludes>
                        <exclude>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                        </exclude>
                    </excludes>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <repositories>
        <repository>
            <id>aliyun-maven</id>
            <url>https://maven.aliyun.com/repository/public</url>
        </repository>
    </repositories>

</project>
